[WPE] WebKitMediaKeySystemPermissionRequest.h missing in top-level header https://bugs.webkit.org/show_bug.cgi?id=223076

Patch by Philippe Normand <pnormand@igalia.com> on 2021-03-11
Reviewed by Adrian Perez de Castro.

* UIProcess/API/wpe/WebKitMediaKeySystemPermissionRequest.h: Fix copy/paste mistake from GTK version of this
header.
* UIProcess/API/wpe/webkit.h: The WebKitMediaKeySystemPermissionRequest header has to be
included here so apps can consume this new API.

Canonical link: https://commits.webkit.org/235189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274294 268f45cc-cd09-0410-ab3c-d52691b4dbfc